Formatting and wording
- Code formatting adjusted
- Content/wording adjusted
- Added note to include video walkthrough
- Added notes to input code screenshots

--- a/Case Study/index.html
+++ b/Case Study/index.html
@@ -7,80 +7,129 @@
 <body>
     <h1>Atom Case Study</h1>
     <p>
-        Atom is a habit-tracking application that aims to use the social connections to help people stay on track of habits and goals in their lives. 
-        This application was built over six months and featured three main phases: initial research, application flow, and user testing, and final building and development.
-        These three phases helped us create a functional finished product as well as helped teach us a lot about the design process.   
+        Atom is a habit-tracking application that aims to use social connections to help people stay on track of habits and goals in their lives. 
+        This application was built over six months. Its development featured four main phases: initial research, application flow, user testing, and final building and development.
+        These four phases helped us create a functional finished product as well as helped teach us a lot about the design process.   
     </p>
-    <img src="images/hero.png" alt="images ove several different screens of the app">
+    <img src="images/hero.png" alt="Hero Image">
     <h2>Team & Background</h2>
-    <img src="images/the-team.png">
+    <img src="images/the-team.png" alt="Team Image">
     <p>
         Across a six-month period, our team aimed to build a habit-tracking app. 
-        Our only real constraints and budget were the time we had and the skills that we had learned over the past three years in the UXID program.
+        Our only real constraints and budget were the time we had and the skills that we had learned over the past three to four years in the UXID program.
     </p>    
 
+
     <h2>Problem</h2>
-    <p>Changing aspects of your life can be very difficult on your own. Managing all of the small habits that go into making a larger 
-        lifestyle change can take a lot of effort, and holding yourself accountable to those habits is often a challenge. </p>
-    
+    <p>
+        Changing aspects of your life can be very difficult on your own. Managing all of the small habits that go into a larger 
+        lifestyle change can take a lot of effort, and holding yourself accountable to those habits is often a challenge.
+    </p>
+
+
     <h2>Deliverables & Objectives</h2>
-    <p>Atom seeks to provide users with the ability to manage their goals and the habits that help them build towards those goals. It is also community focused, 
-        allowing you to add your friends or team members and hold each other accountable for the changes they want to make in their lives. 
-        The goals of the project are to create a functioning web app that allows users to add goals and habits, and connect with other users in groups. </p>
+    <p>
+        Atom seeks to help users manage their goals - and more importantly, to manage the habits that help them build towards those goals. It is also community focused, 
+        allowing you to add your friends or team members to a single Group Goal. The app encourages your group members to hold each other accountable for the changes they want to make in their lives. 
+        The goals of the project are to create a functioning web app that allows users to add goals and habits, and connect with other users in groups. 
+    </p>
+
+
     <h2>Process</h2>
+
     <h3>Research</h3>
-    <p>The first step of the project was research, and we did quite a lot of it. 
-        Because habits are something that has a fair amount of psychology research done on them that was our fist stop. 
-        We compiled and synthesized several sources on the topic in order to give us a clearer direction on the methods we would use to keep tracking their habits. 
+    <p>
+        The first step of the project was research, and we did quite a lot of it. 
+        Our first step was to research the psychology of habit tracking. 
+        We compiled and synthesized several sources on the topic in order to give us a clearer direction on the methods we would use. 
         This paper can be downladed as a PDF <a href="images/ATOM - User Psychology.pdf" target = "_blank"download>here.</a> The main conclusions 
-    that we found from this research that we looked to incorperate into every step of our design process when builing the app are:</p>
+        that we found from this research that we looked to incorperate into every step of our design process when builing the app are:
+    </p>
     <ul>
-        <li>Reminders and repetition</li>
-        <li>Breaking up goals into micro habits helps keep </li>
-        <li>Pressure from groups will keep users engaged</li>
+        <li><b>Reminders and repetition</b> - Consistent usage of the app is crucial to its effect being successful</li>
+        <li><b>Breaking up goals into micro habits</b> - Micro habits are small actions you take every day. These can easily build towards larger goals</li>
+        <li><b>Pressure from groups will keep users engaged</b> - Habits are best maintained by those working towards the same goal</li>
     </ul>
-    <p>We completed target user research in order to gain more insight into our target audience. Our target users are college aged studdents who have a lot of different
-         tasks that thethey need to manage to keep up with in their packed schedules. We created use personas to go along with the target audience research. We created these personas
-         to keep us thinking about our user all throughout the design process. We were constantly able to reference
-         these personas and consider what these users would want. </p>
-         <img src="images/personas.png">
-        <p>We also did a competitive analysis in order to see what other habit tracking was doing well that we could iterate on and what areas they needed to 
-        improve so we could avoid those shortcomings.</p>
-        <img src="images/Competitive-analysis.png">
+    <p>
+        Additionally, we conducted targeted user research in order to gain more insight into our audience. Our target users are college-aged students who have a lot of different
+        tasks that they need to manage all at once. We created user personas to go along with our research - these personas
+        kept us thinking about our user all throughout the design process. These were invaluable refrences during UI/UX development; these personas allowed us to easily consider what these users would want. 
+    </p>
+    <img src="images/personas.png">
+    <p>
+        We also conducted a competitive analysis in order to gauge the choices and/or effectiveness of habit tracking competitors currently on the market.
+        The main purpose of this exercise was to iterate upon what we found effective, and avoid the issues we found. 
+    </p>
+    <img src="images/Competitive-analysis.png">
+
     <h3>Wireframes & User Testing</h3>
-    <p>Once we had a good understanding of the psychology, users, and competitors we started the creation of our wireframes, as well as moodboards, and concepts for 
-        the look and feel of the app. This focus on the aesthetic early on became a problem later down the line, but we shall get to that. </p>
-        <img src="images/initial-wirefames.png">
-        <img src="images/initial-styleguide.png">
-    <p>Now that we had our first wireframe flow we started on user testing, then making changes based upon the test results, this process was repeated multiple times
-         throughout the fall quarter, and with each run through we got closer to our final flow concept but there was something about the flow and the way we differentiated 
-         between goals and habits that was not clicking with our users.</p>
-        <img src="images/mid-wireframes.png">
-    <p>Coming back from break this disconnect was the big thing that we needed to find a solution for, so we created a bunch of new user flows that addressed the problem in 
-        different ways. We alsp created a new color scheme to test alongside the original concept, and our current dark blue and orange scheme. The feedback we received 
-        from testing the flows and colors gave us information that the new color scheme with shades of teal and orange reflected both a fun personality without going overboard. 
-        We were also able to pull the concepts from the different flows that users found to be the best and combined them to create a flow that addressed the issues we
-         were having and was preferred by the users.</p>
+    <p>
+        Once we flet that we understood our users, the psychology behind goals and habits, and our competitors' approaches, we began heavy UI development. 
+        This involved building out our wireframes, as well as color palattes and other visual ideas.
+        This focus on the aesthetic was reinforced by our desire to make a friendly, appealing, and heavily stylized app; 
+        we would re-evaluate this approach down the line, and it would have been wise to focus on this more heavily at a later point in development.
+    </p>
+    <img src="images/initial-wirefames.png">
+    <img src="images/initial-styleguide.png">
+    <p>
+        After creating our initial wireframe flow, we began user testing. 
+        This started with physical paper prototype testing, and used our testing results to create an interactible prototype in Figma.
+        The process of building a new wireframe iteration, testing it, 
+        then using this advice for the next round was repeated multiple times throughout the fall quarter. 
+        With each round of testing, we got closer and closer to creating the most efficient and enjoyable flow for our users. 
+        However, one large issue was presenting itself: users were continually confused about the difference between goals and habits.
+    </p>
+    <img src="images/mid-wireframes.png">
+    <p>
+        Coming back from winter break, we knew we needed to quickly find a solution for this disconnect.
+        We rapidly iterated through 4 new user flows, all of which addressed the goal/habit issue in different ways.
+        We had users compare these flows, allowing us to understand which aspects of which flows illuminated the issue.
+        Eventually, we decided to use bits and pieces of all 4 of these new flows to create the flow present in our high fidelity prototypes.
+        We now provide clear instructions and prompts throughout the process, while also providing users easy ways to edit their goals or quickly add new habits.
+        <br>
+        We also created a variety of new color scheme to test alongside our current dark blue and orange scheme.
+        Feedback we recieved from our mid fidelity tests told us that this color scheme lacked pop and fun.
+        After testing, we settled on a new color scheme with shades of teal and orange. 
+        We felt that it was light-hearted, but still professional and encouraging.
+    </p>
     <img src="images/color-scheme-tests.png">
     <img src="images/final-styleguide.png">
+
     <h3>Development</h3>
-    <p>Now that we had our flow much more honed in and our styling decided, we started on the development. This app was created using react and firebase. The components of 
-        the application were built in such a way that they could be reused in multiple different sections instead of having to rebuild components over and over again, 
-        the ability to reuse and edit the components made the front-end development a much more streamlined process than it potentially could have been. Once all of
-         the components and screens were built out it was time to connect them to the back-end database code that had been worked on concurrently with the front-end. </p>
+    <p>
+        Now that we had honed in on our flow and set our stylization in stone, we began focusing on development. 
+        This app was created using React and Firebase. 
+        From the beginning stages of development, which had begun as early as mid fidelity prototyping, our focus was to build reausable and adjustable components that could be inserted into a variety of sections.
+        As our flow and design changed, so did these components, but this model of building allowed us to streamline development.
+        <!-- INSERT SCREENSHOT OF FRONT-END COMPONENT CODE -->
+        We built out the front-end of components as soon as their wireframes were complete, and soon moved on to creating back-end functionality.
+        <!-- INSERT SCREENSHOT OF BACK-END FUNCTIONALITY CODE -->
+    </p>
+
 
     <h2>The Solution</h2>
-    <p>Video walkthrough with descriptions (to do)</p>
+    <!-- PUT VIDEO WALKTHROUGH HERE --><p>Video walkthrough with descriptions (to do)</p>
 
-    <p>We also created a video to showcase a potential user's experience with the application</p>
+    <p>
+        We also created a video to showcase a potential user's experience with the application.
+    </p>
     <video controls><source src="images/atom_UserVideo.mp4" type="video/mp4"></video>
 
+
     <h2>Results & Takeaways</h2>
-    <p>In the end, we were able to create an application that fulfills our base-level concept. There were certainly features that we wish we could have added but given the nature of the 
-        project having this core functionality makes this project successful. Also the amount that we were able to learn over the course of these six months is a huge success. </p>
-    <p>There were a nearly uncountable number of moments of learning from this project. From time management group leadership and communication to a greater understanding 
-        of the purpose and usefulness of all of the steps of the design process. In the future, we would put more work into our upfront organization as a team to help keep us all 
-        on track and help take the burden off of the project manager to constantly be assigning new tasks. Another big lesson we learned was just how many steps and processes go 
-        into the creation of a project like this. Up until this point we had not the opportunity to work from start to finish on an application in this way and doing all of the
-         different aspects of the project together as a small team really showed so much more of how much work goes into every piece of technology we interact with on a daily basis. </p>
+    <p>
+        In the end, we were able to create a usable web app that fulfills our base-level concept.
+        There are certainly some extraneous features that we wish that we could have added, but given our limited time and team size, implementing core functionality constitutes a successful project.
+        We are also successful in that we have learned invaluable lessons about the management of team projects, all within six months.
+    </p>
+    <p>
+        There were a nearly uncountable number of moments of learning from this project - from time management, to communication, to a greater understanding of the purpose and usefulness of data organization.
+        In the future, we would put more work into team organization.
+        We like the idea of designating certain individuals to make executive decisions on certain sections of the project.
+        This would make sure all aspects of the project are progressing, and help take the burden off of the project manager to assign tasks.
+        Another important lesson was just how many steps and processes go into the creation of a project like this. 
+        Up until this point, we had not the opportunity to work from start to finish on an application in this way; 
+        developing this entire project from the ground up as a small team really showed how much effort goes into every single product we interact with daily.
+        At some point, someone - likely a team of people - had to develop that product, just like we did.
+    </p>
 </body>
