Spelling and grammar checks
Spelling and grammar fixes

--- a/Case Study/index.html
+++ b/Case Study/index.html
@@ -42,8 +42,8 @@
         The first step of the project was research, and we did quite a lot of it. 
         Our first step was to research the psychology of habit tracking. 
         We compiled and synthesized several sources on the topic in order to give us a clearer direction on the methods we would use. 
-        This paper can be downladed as a PDF <a href="images/ATOM - User Psychology.pdf" target = "_blank"download>here.</a> The main conclusions 
-        that we found from this research that we looked to incorperate into every step of our design process when builing the app are:
+        This paper can be downloaded as a PDF <a href="images/ATOM - User Psychology.pdf" target = "_blank"download>here.</a> The main conclusions 
+        that we found from this research that we looked to incorporate into every step of our design process when buiding the app are:
     </p>
     <ul>
         <li><b>Reminders and repetition</b> - Consistent usage of the app is crucial to its effect being successful</li>
@@ -53,7 +53,7 @@
     <p>
         Additionally, we conducted targeted user research in order to gain more insight into our audience. Our target users are college-aged students who have a lot of different
         tasks that they need to manage all at once. We created user personas to go along with our research - these personas
-        kept us thinking about our user all throughout the design process. These were invaluable refrences during UI/UX development; these personas allowed us to easily consider what these users would want. 
+        kept us thinking about our user all throughout the design process. These were invaluable references during UI/UX development; these personas allowed us to easily consider what these users would want. 
     </p>
     <img src="images/personas.png">
     <p>
@@ -64,8 +64,8 @@
 
     <h3>Wireframes & User Testing</h3>
     <p>
-        Once we flet that we understood our users, the psychology behind goals and habits, and our competitors' approaches, we began heavy UI development. 
-        This involved building out our wireframes, as well as color palattes and other visual ideas.
+        Once we felt that we understood our users, the psychology behind goals and habits, and our competitors' approaches, we began heavy UI development. 
+        This involved building out our wireframes, as well as color palettes and other visual ideas.
         This focus on the aesthetic was reinforced by our desire to make a friendly, appealing, and heavily stylized app; 
         we would re-evaluate this approach down the line, and it would have been wise to focus on this more heavily at a later point in development.
     </p>
@@ -87,8 +87,8 @@
         Eventually, we decided to use bits and pieces of all 4 of these new flows to create the flow present in our high fidelity prototypes.
         We now provide clear instructions and prompts throughout the process, while also providing users easy ways to edit their goals or quickly add new habits.
         <br>
-        We also created a variety of new color scheme to test alongside our current dark blue and orange scheme.
-        Feedback we recieved from our mid fidelity tests told us that this color scheme lacked pop and fun.
+        We also created a variety of new color schemes to test alongside our current dark blue and orange scheme.
+        Feedback we received from our mid fidelity tests told us that this color scheme lacked pop and fun.
         After testing, we settled on a new color scheme with shades of teal and orange. 
         We felt that it was light-hearted, but still professional and encouraging.
     </p>
@@ -99,7 +99,7 @@
     <p>
         Now that we had honed in on our flow and set our stylization in stone, we began focusing on development. 
         This app was created using React and Firebase. 
-        From the beginning stages of development, which had begun as early as mid fidelity prototyping, our focus was to build reausable and adjustable components that could be inserted into a variety of sections.
+        From the beginning stages of development, which had begun as early as mid fidelity prototyping, our focus was to build reusable and adjustable components that could be inserted into a variety of sections.
         As our flow and design changed, so did these components, but this model of building allowed us to streamline development.
         <!-- INSERT SCREENSHOT OF FRONT-END COMPONENT CODE -->
         We built out the front-end of components as soon as their wireframes were complete, and soon moved on to creating back-end functionality.
@@ -128,7 +128,7 @@
         We like the idea of designating certain individuals to make executive decisions on certain sections of the project.
         This would make sure all aspects of the project are progressing, and help take the burden off of the project manager to assign tasks.
         Another important lesson was just how many steps and processes go into the creation of a project like this. 
-        Up until this point, we had not the opportunity to work from start to finish on an application in this way; 
+        Up until this point, we had not had the opportunity to work from start to finish on an application in this way; 
         developing this entire project from the ground up as a small team really showed how much effort goes into every single product we interact with daily.
         At some point, someone - likely a team of people - had to develop that product, just like we did.
     </p>
