Spelling grammar update

--- a/Case Study/index.html
+++ b/Case Study/index.html
@@ -73,7 +73,7 @@
     <img src="images/initial-styleguide.png">
     <p>
         After creating our initial wireframe flow, we began user testing. 
-        This started with physical paper prototype testing, and used our testing results to create an interactible prototype in Figma.
+        This started with physical paper prototype testing, and used our testing results to create an interactive prototype in Figma.
         The process of building a new wireframe iteration, testing it, 
         then using this advice for the next round was repeated multiple times throughout the fall quarter. 
         With each round of testing, we got closer and closer to creating the most efficient and enjoyable flow for our users. 
