--- a/Case Study/index.html
+++ b/Case Study/index.html
@@ -101,7 +101,10 @@
         This app was created using React and Firebase. 
         From the beginning stages of development, which had begun as early as mid fidelity prototyping, our focus was to build reusable and adjustable components that could be inserted into a variety of sections.
         As our flow and design changed, so did these components, but this model of building allowed us to streamline development.
-        <!-- INSERT SCREENSHOT OF FRONT-END COMPONENT CODE -->
+  </p>
+  <img src="images/component-dev.png">
+  <img src="images/polish.png">
+  <p>
         We built out the front-end of components as soon as their wireframes were complete, and soon moved on to creating back-end functionality.
         <!-- INSERT SCREENSHOT OF BACK-END FUNCTIONALITY CODE -->
     </p>
