--- a/Case Study/index.html
+++ b/Case Study/index.html
@@ -111,7 +111,13 @@
 
 
     <h2>The Solution</h2>
-    <!-- PUT VIDEO WALKTHROUGH HERE --><p>Video walkthrough with descriptions (to do)</p>
+    <!-- PUT VIDEO WALKTHROUGH HERE --><p>Here is our final deliverable. Starting at the home pageusers clic the plus button
+  which takes them to a popout menu with descriptions of both goals and habits. Upon the selection of either goal or habit from this menu users
+  are takes to the appropriate creation screen. The application tries to give as much information as possible to the users about goals and habits whithin this creation.
+  once a goal is created a user can add a habit to the goal. These habits build towards the larger goal because of the psycology research we found on the nature of goal and habit
+  formation. Demonstrating the conection and distinction between the two is very important. After creating goals and habits to go in them users return home and
+  can begin working towards achieving their goals. The group features work similarly however they also allow interaction between users as this was
+  a huge psycological benefit in terms of sticking with habits and accomplishing goals.</p>
 
     <p>
         We also created a video to showcase a potential user's experience with the application.
