Final video add

--- a/Case Study/index.html
+++ b/Case Study/index.html
@@ -111,13 +111,16 @@
 
 
     <h2>The Solution</h2>
-    <!-- PUT VIDEO WALKTHROUGH HERE --><p>Here is our final deliverable. Starting at the home pageusers clic the plus button
-  which takes them to a popout menu with descriptions of both goals and habits. Upon the selection of either goal or habit from this menu users
-  are takes to the appropriate creation screen. The application tries to give as much information as possible to the users about goals and habits whithin this creation.
-  once a goal is created a user can add a habit to the goal. These habits build towards the larger goal because of the psycology research we found on the nature of goal and habit
-  formation. Demonstrating the conection and distinction between the two is very important. After creating goals and habits to go in them users return home and
-  can begin working towards achieving their goals. The group features work similarly however they also allow interaction between users as this was
-  a huge psycological benefit in terms of sticking with habits and accomplishing goals.</p>
+    <video controls><source src="images/Atom_VideoWalkthrough.mp4" type="video/mp4"></video>
+    <p>
+    Here is our final deliverable. The walkthrough begins with a simulation of creating an account and a new group goal. Then, the user clicks the Add button
+    which takes them to a popout menu with descriptions of both goals and habits. Upon the selection of either goal or habit from this menu users
+    are taken to the appropriate creation screen. The application tries to give as much information as possible to the users about goals and habits whithin this creation.
+    Once a goal is created, a user can add a habit to the goal. These habits build towards the larger goal, since the psycology research we found on the nature of goal
+    tracking indicated that all goals should be worked towards with micro habits. Demonstrating the conection and distinction between the two is very important.
+    The group features work similarly, however, they also allow interaction between users. This is
+    a huge psycological benefit in terms of sticking with habits and accomplishing goals.
+</p>
 
     <p>
         We also created a video to showcase a potential user's experience with the application.
